# DanteHarvest

./: .cursorignore  .gitignore  pyproject.toml  requirements.txt
.claude/: settings.json
.danteforge/: ASCEND_REPORT.md  CLARIFY.md  COMPETITIVE_LANDSCAPE.md  CONSTITUTION.md  EXPANDED_COMPETITIVE_INTELLIGENCE.md  GOAL_STATUS.json  OSS_DONOR_BACKLOG.md  OSS_UNIVERSE.md  PLAN.md  PRIME.md  SPEC.md  STATE.yaml  TASKS.md  assessment-history.json  decision-nodes.jsonl  lessons.md  memory.json  oss-registry.json  oss-structural-scan.json
.danteforge/compete/: MASTERPLAN.md  matrix-v2-learning-map.md  matrix-v2.json  matrix-v3.json  matrix.json  matrix.pre-migration-1778762920646.json
.danteforge/matrix/: matrix.agent-runs.json  matrix.dimension-graph.json  matrix.gate-reports.json  matrix.lease-graph.json  matrix.mailbox.json  matrix.merge-decisions.json  matrix.project-graph.json  matrix.retrospective.json  matrix.simulation-plan.json  matrix.work-graph.json
.danteforge/scripts/: check-v3-nine.js
.danteforge/wiki/: pdse-history.md
Docs/: DanteHarvestDeepresearchPRD.md
Docs/harvest/: DOCTRINE.md
harvest_acquire/browser/: action_layer.py  agent_session.py  dom_selector_builder.py  playwright_engine.py  playwright_pool.py  robots_validator.py
harvest_acquire/connectors/: __init__.py  airtable_connector.py  base_connector.py  confluence_connector.py  connector_registry.py  gdrive_connector.py  github_connector.py  gitlab_connector.py  (+6 more)
harvest_core/: __init__.py  time_machine_decision_node.py
harvest_ui/: cli.py  tui.py  tui_app.py  tui_progress.py
(+316 files in other folders)
