[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dante-harvest"
version = "0.1.0"
description = "Rights-governed evidence acquisition, observation, distillation, and packaging system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "playwright>=1.43",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "opencv-python-headless>=4.9",
    "markitdown>=0.0.1",
    "asyncio-mqtt>=0.16",
]

[project.scripts]
harvest = "harvest_ui.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["harvest_*", "harvest_*.*", "harvest_*.*.*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
